# copy_from_in

./: .gitignore  Cargo.toml  architector_thread.txt  build.rs  build.sh  data.sql  excludes.redb  from_backup_to_architector.task  from_in_to_backup.task  in2_thread.txt  index.html  install_libs  medo.sq3  medo.sq3-shm  medo.sq3-wal  package-lock.json  package.json  pnpm-lock.yaml  settings.json  settings.toml  sf_copy_thread.txt  tauri.ts  test_del_task.task  test_in3_task.task  test_settings.json  test_settings1.json  tsconfig.json  vite.config.ts
in2/2/: passport.xml
in2/38773995_1 copy 3/container/: visa1.sig
in2/70178878_1 copy 24/: envelope.ltr
libs/copy/: Cargo.toml  from_backup_to_architector.task  settings.json
libs/db/: Cargo.toml  data.sql
libs/db/src/: error.rs  lib.rs  tests.rs
libs/db/src/models/: addresse.rs  connection.rs  contact_info.rs  mod.rs  operations.rs  packet.bak  packet.rs  packet_table.rs
libs/fc_server/: Cargo.toml  downgrade.md  excludes.redb  settings.toml  test_task_!.task
libs/fc_server/src/: api.rs  cli.rs  error.rs  main.rs  messages_processor.rs  packets_handler.rs  state.rs  ws.rs
libs/fc_server/src/commands/: helpers.rs  mod.rs  service.rs  settings.rs
libs/fc_server/src/copyer/: directories_spy.rs  excludes.rs  io.rs  mod.rs  serialize.rs  service.rs
libs/fc_server/src/db/: addresse_table.rs  except_table.rs  mod.rs  packet_table.rs
libs/fc_server/src/helpers/: date.rs
libs/fc_server/src/services/: api.http  api.rs  api_pdf_page.http  date.rs  files.rs  forget_directories_watcher.rs  mod.rs  packets.rs  redb.rs  service.rs  settings.rs  ws.rs
libs/fc_server/src/services/grpc/proto/: packets.proto  task.proto
libs/fc_server/src/services/requests/: get_packets_list.http  get_tasks.http
libs/medo_parser/: Cargo.toml  test_packet_2_7_1.json
libs/medo_parser/src/: delivery_tickcket_packet.rs  deserializers.rs  error.rs  helpers.rs  io.rs  lib.rs  medo_model.rs  packet.rs  parser.rs  tests.rs  traits.rs
libs/medo_parser/src/converters/: converter.rs  mod.rs  rc_converter.rs  xml_converter.rs
libs/medo_parser/src/modules/: mod.rs  rc.rs
libs/medo_parser/src/xml/: acknowledgment.rs  communication.rs  header.rs  ltr.rs  ltr_with_tokenizer  mod.rs  source.rs  xml_parser.rs
libs/medo_parser/src/xml/version_2_5/: document.rs  files.rs  mod.rs
libs/medo_parser/src/xml/version_2_7/: delivery_index.rs  mod.rs  root_container.rs
libs/medo_parser/src/xml/version_2_7/container/: addressee.rs  attachment.rs  author.rs  container.rs  document.rs  mod.rs  organization.rs  requisites.rs
libs/pdf/: Cargo.toml
libs/pdf/src/: error.rs  lib.rs  multiple_pages.rs  service.rs  status.rs
libs/serializer/: Cargo.toml
libs/serializer/src/: lib.rs
libs/settings/: Cargo.toml  TASK.task  from_backup_to_architector.task  from_in_to_backup.task  rust-toolchain.toml  settings.json  settings.toml
libs/settings/src/: dates.rs  file_methods.rs  io.rs  lib.rs  settings.rs  task.rs  validation_error.rs
libs/transport/: Cargo.toml
libs/transport/src/: contract.rs  files.rs  lib.rs  new_document.rs  new_packet_info.rs  packet.rs  pagination.rs
src/: App.scss  App.tsx  app.tsx  copy.rs  defines.rs  env.d.ts  hljs.ts  main.rs  main.ts  main_grid.scss  settings.rs  style.css  tauri.ts  vite-env.d.ts
src-tauri/: .taurignore  Cargo.toml  build.rs  from_backup_to_architector.task  from_in_to_backup.task  settings.toml  settings.tomla  tauri.conf.json  test_task_!.task
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  emits.rs  error.rs  file.rs  http.rs  http_service.rs  lib.rs  main.rs  nosleep.rs  state.rs  state_updater.rs  ws_serivice.rs
src-tauri/src/commands/: dictionaries.rs  helpers.rs  mod.rs  packets.rs  service.rs  settings.rs  statuses.rs  users.rs
src-tauri/src/copyer/: directories_spy.rs  io.rs  mod.rs  service.rs
src-tauri/src/helpers/: date.rs  mod.rs  retry.rs
src-tauri/src/models/: dictionary.rs  disease.rs  disease_test.rs  disease_type.rs  mod.rs  phones.rs  post.rs  status.rs  user.rs  vactination.rs
src-tauri/src/plugins/: date.rs  mod.rs  packets.rs  service.rs  settings.rs  websocket.rs
src-tauri/src/services/: sse.rs
src/app/: app.rs  app_state.rs  mod.rs
src/assets/styles/: status_card.scss
src/components/: errors.tsx  new-task-modal.tsx  packets.tsx  task-card.tsx  tasks.tsx
src/components/header/: header.tsx
src/components/loader/: loader.tsx
src/components/modal/: modal.tsx
src/io/: directories_spy.rs  io.rs  mod.rs  serialize.rs
src/models/: app_state.ts  file_types.ts  packet.ts  senders.ts  types.ts  user.ts
src/modules/: AcceptDelete.vue  dictionary_editor.tsx  header_with_description.tsx  journal_editor.tsx  live_search.tsx  loader.scss  loader.tsx  log_viewer.tsx  main_tab.tsx  modals.tsx  nav.tsx  packets_viewer.tsx  services.tsx  settings_editor.tsx  status_card.tsx  user_list.tsx  user_status.tsx  user_vactination_status.tsx  users_consumption.tsx
src/modules/Loader/: Loader.vue  Loader2.vue  loader.scss
src/modules/Senders/: ContactEditor.vue  ContactInfo.vue  ImageUploader.vue  OrganIcon.tsx  SenderEditor.vue  SendersViewer.vue  main_column.ts  senders.ts
src/modules/file_selector/: drawler_file_selector.tsx  file_selector_label.ts  table_file_selector.tsx
src/modules/file_viewer/: FileViewer.vue  pdf_logic.ts
src/modules/main_tab/: main_tab.tsx
src/modules/time_warnings/: time_warnings_editor.tsx  time_warnings_viewer.tsx
src/modules/user_card_editor/: buisness_trip_editor.tsx_OLD  disease_editor.tsx  editor_selector.tsx  ordered_editor.tsx  status_editor.tsx  types.ts  user_info_editor.tsx  vactination_editor.tsx
src/services/: api.ts  data.ts  date.ts  dictionaries.ts  emit.ts  helpers.ts  notification.ts  sounds.ts  svg.ts  tauri-service.ts  tauri.ts  test_data.ts
src/store/: app_state_store.ts  base_store.ts  global_store.ts  index.ts
src/types/: types.ts
src/utils/: utils.ts
test_data/уведомление_о_регистрации/: envelope
уведомление_о_регистрации/: document.xml
(+39 files in other folders)
