[package]
name = "copy_from_in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.87"
serde = {version = "1.0.147", features = ["derive"]}
chrono="*"
#quickxml_to_serde="0.5.0"

#serde_yaml = "0.9.14"

# Ui
iced = {version="0.9.0"}
tokio = {version ="1.27.0", features = ["rt", "rt-multi-thread", "time", "macros"]}
once_cell="1.17.1"
logger = {path = "/hard/xar/projects/rust/format/format_struct/logger"}
# SVG Render
#resvg = "0.28.0"
#tiny-skia = "0.8.2"
#usvg = "0.28.0"