[package]
name = "copy_from_in"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.113"
serde = {version = "1.0.196", features = ["derive"]}
chrono="0.4.33"
regex="1.10.3"
crossbeam-channel="0.5.11"
tokio = {version ="1.35.1", features = ["rt", "rt-multi-thread", "time", "macros"]}
once_cell="1.19.0"
logger = { path = "/hard/xar/projects/rust/format/format_struct/logger" }
clap = {version="4.4.18", features = ["derive"]}
encoding = "0.2.33"
zip = "0.6.6"