[package]
name = "packets_copyist_tasker_workspace"
version = "0.1.0"
edition = "2021"
authors = ["Alex_Xar <P40b0s@gmail.com>"]

[workspace]
members = [
    "src-tauri",
    "libs/medo_parser",
    "libs/settings", 
    "libs/fc_server",
    "libs/transport",
    "libs/pdf"
]
default-members = ["src-tauri"]

[dependencies]



