[package]
name = "client"
version = "0.1.0"
description = "Планировщик копирования пакетов МЭДО"
authors = ["phobos"]
license = ""
repository = ""
default-run = "client"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }



#sudo dnf install mingw32-gcc mingw64-gcc
[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0.190", features = ["derive"] }
tauri = { version = "1.6.1", features = ["app-all", "clipboard-all", "fs-all", "notification-all", "dialog-all"] }
#logger = {path = "../../../rust/universal_format/format_constructor/logger"}
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
once_cell="*"
chrono="0.4.31"
anyhow="1.0.79"
thiserror="1.0.56"
tokio= {version = "*", features = ["macros"] }
tokio-test= {version ="*"}
uuid = {version = "1.6.1", features = ["v4"] }
const_format = "0.2.32"
settings = {path = "../libs/settings"}
medo_parser = {path = "../libs/medo_parser"}
transport = {path = "../libs/transport"}
crossbeam-channel="0.5.11"
clap= {version = "4.5.4", features = ["derive"] }
clap_derive="4.5.4"
#http requests
hyper= {version="1.2.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.1"
bytes="1.6.0"
async-channel="2.2.0"

[dependencies.service]
git = "https://github.com/P40b0s/websocket_service.git"
package="service"
default-features = false
features = ["json", "client"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
