[package]
name = "client"
version = "1.0.5"
description = "Планировщик копирования пакетов МЭДО"
authors = ["phobos"]
license = ""
repository = ""
default-run = "client"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "test_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }



#sudo dnf install mingw32-gcc mingw64-gcc
[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"

[dependencies]
#features = ["app-all", "fs-all", "notification-all"]
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
tauri = { version = "2.1.1" }
#logger = {path = "../../../rust/universal_format/format_constructor/logger"}
logger = {git = "https://github.com/P40b0s/logger.git"}
once_cell="1.20.2"
chrono="0.4.38"
anyhow="1.0.89"
thiserror="1.0.64"
tokio= {version = "1.40.0", features = ["macros"] }
tokio-test= {version ="0.4.4"}
uuid = {version = "1.10.0", features = ["v4", "v7"] }
settings = {path = "../libs/settings"}
medo_parser = {path = "../libs/medo_parser"}
transport = {path = "../libs/transport"}
crossbeam-channel="0.5.13"
clap= {version = "4.5.4", features = ["derive"] }
clap_derive="4.5.4"
#http requests
hyper= {version="1.2.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.1"
bytes="1.7.2"
async-channel="2.2.0"
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
nosleep = "0.2.1"


[dependencies.service]
git = "https://github.com/P40b0s/websocket_service.git"
package="service"
default-features = false
features = ["json", "client"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
