[package]
name = "db"
version = "0.2.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled", "serde_json"] }
serde = {version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
uuid = {version = "1.3.0", features = ["v4"]}
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
