[package]
name = "fc_server"
version = "0.2.0"
edition = "2021"
description = "Сервер копирования пакетов МЭДО"
authors = ["phobos"]
license = ""
repository = "https://github.com/P40b0s/copy_from_in"


#sudo dnf install mingw32-gcc mingw64-gcc
[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"

[dependencies]
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
once_cell="1.19.0"
chrono="0.4.37"
anyhow="1.0.81"
thiserror="1.0.58"
tokio= {version = "1.37.0", features = ["macros", "rt", "rt-multi-thread", "bytes"] }
tokio-test= {version ="0.4.4"}
uuid = {version = "1.8.0", features = ["v4"] }
const_format = "0.2.32"
settings = {path = "../settings"}
db = {path = "../db"}
transport = {path = "../transport"}
crossbeam-channel="0.5.12"
#http api
hyper= {version="1.2.0", features = ["server", "http1"]}
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.1"
bytes="1.6.0"
flexbuffers="2.0.0"
clap= {version = "4.5.4", features = ["derive"]}
clap_derive="4.5.4"
async-channel="2.2.0"
futures = "0.3.30"
url="2.5.0"
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}

[dependencies.service]
git = "https://github.com/P40b0s/websocket_service.git"
package="service"
default-features=false
features = ["server", "json"]

