[package]
name = "fc_server"
version = "0.2.0"
edition = "2021"

description = "Сервер копирования пакетов МЭДО"
authors = ["phobos"]
license = ""
repository = "https://github.com/P40b0s/copy_from_in"


#sudo dnf install mingw32-gcc mingw64-gcc
[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
once_cell="1.19.0"
chrono="0.4.38"
anyhow="1.0.81"
thiserror="1.0.61"
tokio= {version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "bytes"] }
tokio-test= {version ="0.4.4"}
uuid = {version = "1.8.0", features = ["v7"] }
const_format = "0.2.32"
settings = {path = "../settings"}
transport = {path = "../transport"}
crossbeam-channel="0.5.12"
#http api
hyper= {version="1.2.0", features = ["server", "http1"]}
hyper-util = { version = "0.1.5", features = ["full"] }
http-body-util = "0.1.1"
bytes="1.6.0"
flexbuffers="2.0.0"
clap= {version = "4.5.7", features = ["derive"]}
clap_derive="4.5.4"
async-channel="2.3.1"
futures = "0.3.30"
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
db_service = {git = "https://github.com/P40b0s/db_service.git"}
hashbrown = {version ="0.15.0" , features = ['serde']}
redb="2.1.4"


[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
    "Wdk_Storage_FileSystem"
]



[dependencies.service]
git = "https://github.com/P40b0s/websocket_service.git"
package="service"
default-features=false
features = ["server", "json"]


