[package]
name = "medo_parser"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
tokenizer = {git = "https://github.com/P40b0s/tokenizer.git", branch = "master"}
tokenizer_derive = {git = "https://github.com/P40b0s/tokenizer.git", branch = "master"}
settings = {path = "../settings"}
quick-xml={version ="0.36.2", features = ["serialize", "overlapped-lists"]}
regex="*"
encoding = "0.2.33"
zip = "2.2.0"
uuid = {version = "1.7.0", features = ["v4"]}
time = { version = "0.3.34", features = ["formatting"] }
once_cell="*"
crossbeam-channel="*"
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}

[features]
default = []
