[package]
name = "medo_parser"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
quick-xml = {version ="0.37.0", features = ["serialize", "overlapped-lists"], optional = true}
regex = { version = "1.11.0", optional = true}
encoding = { version = "0.2.33"}
zip = { version = "2.2.0", optional = true}
uuid = {version = "1.7.0", features = ["v4"]}
#time = { version = "0.3.34", features = ["formatting"] }
once_cell = { version = "1.20.2", optional = true}
crossbeam-channel = { version = "0.5.13", optional = true}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
thiserror = "1.0.61"
[features]
all = ["dep:once_cell", "dep:crossbeam-channel", "dep:zip", "dep:regex", "dep:quick-xml"]
model = []
default = ["all"]

