[package]
name = "pdf"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdfium-render= {version="0.8.26", default-features = false, features = ["pdfium_latest", "thread_safe"]}
serde="1.0.213"
once_cell="1.20.2"
image= {version = "0.24.0", default-features = false, features = ["bmp" ,"jpeg", "png"]}
logger = {git = "https://github.com/P40b0s/logger.git"}
tokio= {version="1.41.1", features = ["test-util", "rt", "macros"]}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
thiserror="1.0.69"
rand="0.8.5"
[dev-dependencies]
futures="*"