[package]
name = "settings"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
uuid = {version = "1.10.0", features = ["v4"]} 
#logger = {path = "../../../../rust/logger"}
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
toml = {version = "0.8.19", features = ['parse']}
blake2 = "0.10.6"
regex="1.11.0"
base64 = "0.13.1"
time = { version = "0.3.36", features = ["formatting", "parsing", "macros"] }
#hashbrown = {version ="0.15.0" , features = ['serde']}
once_cell="1.20.2"
#chrono="0.4.38"