[package]
name = "settings"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}