[package]
name = "transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["json"]
flexbuffers = ["dep:flexbuffers"]
binary = ["dep:bitcode"]
json = ["dep:serde_json"]


[dependencies]
bytes="1.6.0"
flexbuffers= {version="2.0.0", optional = true}
serde_json= {version = "*", optional = true}
bitcode = {version = "0.6.0", optional = true}
anyhow="1.0.81"
settings = {path = "../settings"}
serde = { version = "1.0.197", features = ["derive"], default=false}
logger = {git = "https://github.com/P40b0s/logger.git"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
medo_parser = {path = "../medo_parser"}

[dependencies.service]
git = "https://github.com/P40b0s/websocket_service.git"
package="service"
default-features = false
features = ["json"]